Revert "Change storage from LinkedList to ArrayList"
This reverts commit 743a6ef4c93ad8965daa7741988e91088fba2f99.