@@ -22,9 +22,8 @@ import me.s3ns3iw00.jcommands.argument.Argument;
 import me.s3ns3iw00.jcommands.argument.InputArgument;
 import me.s3ns3iw00.jcommands.listener.CommandActionListener;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
+import java.util.LinkedList;
 import java.util.Optional;
 
 /**
@@ -38,7 +37,7 @@ public class Command {
      * These guys are nice
      */
     private final String name, description;
-    private final List<Argument> arguments = new ArrayList<>();
+    private final LinkedList<Argument> arguments = new LinkedList<>();
     private CommandActionListener action;
 
     /**
@@ -72,7 +71,7 @@ public class Command {
      * @param argument the argument
      */
     public void addArgument(Argument argument) {
-        if (arguments.size() > 0 && (arguments.get(arguments.size() - 1) instanceof InputArgument) && ((InputArgument) arguments.get(arguments.size() - 1)).isOptional()) {
+        if (arguments.size() > 0 && (arguments.getLast() instanceof InputArgument) && ((InputArgument) arguments.getLast()).isOptional()) {
             throw new IllegalStateException("Cannot add argument after an optional argument!");
         }
 
@@ -114,7 +113,7 @@ public class Command {
     /**
      * @return the list of the arguments
      */
-    public List<Argument> getArguments() {
+    public LinkedList<Argument> getArguments() {
         return arguments;
     }
 
